// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsList Should not throw for falsy items 1`] = `
.c3 {
  fill: #708C91;
}

.c3.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c3.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c3 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c2 {
  margin: 0;
  font-weight: 400;
}

.c2.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-body,
.c2.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c2.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c2.kirk-text-subheader,
.c2.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-bodyStrong,
.c2.kirk-text-subheaderStrong,
.c2.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c1.kirk-item--clickable:hover {
  cursor: pointer;
  background: #EDEDED;
}

.c1.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

.c1.kirk-item--wrappable {
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftWrapper {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftText {
  margin-right: 24px;
}

.c1.kirk-item--wrappable .kirk-item-rightText {
  margin-left: 0;
  margin-top: 8px;
  margin-bottom: 8px;
  text-align: left;
}

.c1:disabled {
  cursor: default;
}

a.c1 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c1 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:focus:not(.focus-visible).c1 {
  outline: none;
}

.c1 .kirk-item-leftWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c1 .kirk-text {
  display: block;
}

.c1 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c1 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c1 .kirk-item-leftAddon,
.c1 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c1 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c1.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c1 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style-type: none;
}

<ul
  className="kirk-items-list c0"
>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#1"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 1
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#3"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 3
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list 1`] = `
.c3 {
  fill: #708C91;
}

.c3.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c3.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c3 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c2 {
  margin: 0;
  font-weight: 400;
}

.c2.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-body,
.c2.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c2.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c2.kirk-text-subheader,
.c2.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-bodyStrong,
.c2.kirk-text-subheaderStrong,
.c2.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c1.kirk-item--clickable:hover {
  cursor: pointer;
  background: #EDEDED;
}

.c1.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

.c1.kirk-item--wrappable {
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftWrapper {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftText {
  margin-right: 24px;
}

.c1.kirk-item--wrappable .kirk-item-rightText {
  margin-left: 0;
  margin-top: 8px;
  margin-bottom: 8px;
  text-align: left;
}

.c1:disabled {
  cursor: default;
}

a.c1 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c1 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:focus:not(.focus-visible).c1 {
  outline: none;
}

.c1 .kirk-item-leftWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c1 .kirk-text {
  display: block;
}

.c1 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c1 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c1 .kirk-item-leftAddon,
.c1 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c1 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c1.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c1 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style-type: none;
}

<ul
  className="kirk-items-list c0"
>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#1"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 1
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#2"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 2
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#3"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 3
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with some separators 1`] = `
.c3 {
  fill: #708C91;
}

.c3.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c3.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c3 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c2 {
  margin: 0;
  font-weight: 400;
}

.c2.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-body,
.c2.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c2.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c2.kirk-text-subheader,
.c2.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-bodyStrong,
.c2.kirk-text-subheaderStrong,
.c2.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c1.kirk-item--clickable:hover {
  cursor: pointer;
  background: #EDEDED;
}

.c1.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

.c1.kirk-item--wrappable {
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftWrapper {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftText {
  margin-right: 24px;
}

.c1.kirk-item--wrappable .kirk-item-rightText {
  margin-left: 0;
  margin-top: 8px;
  margin-bottom: 8px;
  text-align: left;
}

.c1:disabled {
  cursor: default;
}

a.c1 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c1 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:focus:not(.focus-visible).c1 {
  outline: none;
}

.c1 .kirk-item-leftWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c1 .kirk-text {
  display: block;
}

.c1 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c1 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c1 .kirk-item-leftAddon,
.c1 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c1 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c1.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c1 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c4 {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c4 > hr {
  border: none;
  background-color: #EDEDED;
  height: 1px;
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style-type: none;
}

<ul
  className="kirk-items-list c0"
>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#1"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 1
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#2"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 2
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
    <div
      className="c4"
    >
      <hr />
    </div>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#3"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 3
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with the separators classname 1`] = `
.c3 {
  fill: #708C91;
}

.c3.kirk-icon-wrapper {
  display: inline-block;
  position: relative;
}

.c3.kirk-icon-shadowed {
  border-radius: 50%;
  box-shadow: 0 0 2px rgba(0,0,0,.3);
}

.c3 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c2 {
  margin: 0;
  font-weight: 400;
}

.c2.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-body,
.c2.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c2.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-display2 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
  font-weight: 500;
}

.c2.kirk-text-display1 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
  font-weight: 500;
}

.c2.kirk-text-subheader,
.c2.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c2.kirk-text-title,
.c2.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c2.kirk-text-bodyStrong,
.c2.kirk-text-subheaderStrong,
.c2.kirk-text-titleStrong {
  font-weight: 500;
}

.c1 {
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c1.kirk-item--clickable:hover {
  cursor: pointer;
  background: #EDEDED;
}

.c1.kirk-item--hideHoverBackground.kirk-item--clickable:hover {
  background: none;
}

.c1.kirk-item--wrappable {
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftWrapper {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1.kirk-item--wrappable .kirk-item-leftText {
  margin-right: 24px;
}

.c1.kirk-item--wrappable .kirk-item-rightText {
  margin-left: 0;
  margin-top: 8px;
  margin-bottom: 8px;
  text-align: left;
}

.c1:disabled {
  cursor: default;
}

a.c1 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c1 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button:focus:not(.focus-visible).c1 {
  outline: none;
}

.c1 .kirk-item-leftWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c1 .kirk-text {
  display: block;
}

.c1 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c1 .kirk-item--strikethrough {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 .kirk-item-title--withButtonAddon {
  position: relative;
}

.c1 .kirk-item-leftAddon,
.c1 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c1 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c1.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

.c1 .kirk-item-title--withButtonAddon button {
  position: absolute;
  width: 24px;
  height: 24px;
  margin-left: 4px;
  bottom: 0;
}

.c4 {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
}

.c4 > hr {
  border: none;
  background-color: #EDEDED;
  height: 1px;
  margin: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style-type: none;
}

<ul
  className="kirk-items-list c0"
>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#1"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 1
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
    <div
      className="c4"
    >
      <hr />
    </div>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#2"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 2
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
    <div
      className="c4"
    >
      <hr />
    </div>
  </li>
  <li
    className="kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c1"
      href="#3"
    >
      <span
        className="kirk-item-leftWrapper"
      >
        <span
          className="kirk-item-leftText"
        >
          <span
            className="kirk-text kirk-text-title c2"
            style={
              Object {
                "color": "#054752",
              }
            }
          >
            Item 3
          </span>
          
        </span>
      </span>
      
      <span
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c3"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;
